query completed stops by date
